# CALMOPS-Pipeline-for-monitoring-Drift

./: .gitignore  AGENTS.md  CLAUDE.md  CONCEPTS.md  CalmOps_Internal_Documentation.md  GEMINI.md  MANIFEST.in  README.md  calmops_cli.py  generate_agrawal_stream.py  generate_custom_datasets.py  generate_data.py  generate_genes.py  generate_scenarios.py  nohup.out  preprocessing_abrupt.py  preprocessing_gradual.py  pyproject.toml  report.json  report_summary.md  requirements.txt  test_clinic_generator.py  test_direct_drift_injection.py  test_generators_integration.py  train_rf_genes.py
.gemini/commands/: iniciar.toml
Detector/: drift_detector.py
IPIP/: pipeline_ipip.py  preprocessing.py
IPIP/modules/: check_drift.py  data_loader.py  default_train_retrain.py  (+1 more)
calmops/: cli.py  requirements.txt  utils.py
config/: defaults.py
data-generators/: PRESENTATION_ANALYSIS.md  SimpleSyntheticGenerator.py  analisis_datos.py  analize_drift.py  analize_synthetic_data.py  create_simplified_real_datasets.py  create_simplified_synthetic_datasets.py  dashboard_dash.py  ejemplo_de_uso.py  penguins_preprocessed_tratado.csv  preprocessing_agrawal.py  simple_real_usage.py  simple_synthetic_usage.py  user.py  user_synthetic.py
data_generators/: ejemplo_sms.py  generate_agrawal_drift.py  generate_agrawal_no_drift.py  generate_gene_dataset.py  generate_minimal_effect_gene_dataset.py  generate_split_gene_control_corr_dataset.py  run_all_tests.py
logger/: logger.py
monitor/: monitor.py  monitor_block.py  monitor_ipip.py  monitor_schedule.py  monitor_schedule_block.py  monitor_schedule_ipip.py  utils.py
pipeline/: pipeline_stream.py  preprocessing.py  retrain.py  train.py
pipeline_block/: pipeline_block.py  preprocessing.py
scripts/: generate_scenario_2_abrupt.py  generate_scenario_3_recurrent.py
tests/: test_data_generators.py  test_dynamics_injector.py  test_extensive_reporting.py  test_privacy.py  verify_clinic_scenario.py
web_interface/: dashboard.py  dashboard_block.py  dashboard_ipip.py  dashboard_real.py  utils.py
(+260 files in other folders)
