[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calmops"
version = "0.1.0"
description = "A Python library for MLOps with drift detection and monitoring."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your@email.com" },
]
dependencies = [
    "apscheduler==3.11.0",
    "dash==3.2.0",
    "DataSynthesizer==0.1.13",
    "Flask==3.1.2",
    "frouros==0.9.0",
    "imbalanced-learn",
    "joblib==1.5.1",
    "lightgbm",
    "matplotlib==3.9.4",
    "numpy==1.26.4",
    "pandas==2.3.1",
    "plotly==5.24.1",
    "rdt==1.17.1",
    "river==0.22.0",
    "scikeras==0.13.0",
    "scikit_learn==1.7.2",
    "scipy==1.14.1",
    "sdv==1.24.1",
    "seaborn==0.13.2",
    "streamlit==1.47.1",
    "torch==2.7.1",
    "watchdog==5.0.3",
]

[project.scripts]
calmops = "calmops.cli:main"

[tool.setuptools]
packages = ["calmops"]
