[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calmops"
version = "0.1.0"
description = "A Python library for MLOps with drift detection and monitoring."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your@email.com" },
]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.3.1",
    "scipy==1.14.1",
    "scikit-learn==1.7.2",
    "matplotlib==3.9.4",
    "seaborn==0.13.2",
    "plotly==5.24.1",
    "imbalanced-learn",
    "lightgbm",
    "river",
]

[project.optional-dependencies]
mlops = [
    "apscheduler==3.11.0",
    "Flask==3.1.2",
    "frouros==0.9.0",
    "joblib==1.5.1",
    "streamlit==1.47.1",
    "watchdog==5.0.3",
]
deeplearning = [
    "sdv>=1.0.0",
    "torch>=2.0.0",
]
full = [
    "calmops[mlops,deeplearning]"
]

[project.scripts]
calmops = "calmops.cli:main"

[tool.setuptools]
packages = {find = {}}
